--- a/src/rpart/z290_TareaHogar_02.ipynb
+++ b/src/rpart/z290_TareaHogar_02.ipynb
@@ -173,10 +173,22 @@
         "drive.mount('/content/.drive')"
       ],
       "metadata": {
-        "id": "ilEZ-bE2VybW"
+        "id": "ilEZ-bE2VybW",
+        "outputId": "b3eb6037-3c2d-446a-9640-807d8c7fb5ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/.drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -227,10 +239,23 @@
         "fi\n"
       ],
       "metadata": {
-        "id": "W8dQFI5QYCFa"
+        "id": "W8dQFI5QYCFa",
+        "outputId": "fd978597-7d4b-41aa-8785-ebab71bd1b2f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -249,10 +274,41 @@
         "gc(full=TRUE, verbose=FALSE) # garbage collection"
       ],
       "metadata": {
-        "id": "oZG_4br6szlT"
+        "id": "oZG_4br6szlT",
+        "outputId": "7592e3c9-c135-48d6-fc81-fa95bce7ba2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<table class=\"dataframe\">\n",
+              "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+              "<thead>\n",
+              "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 656417</td><td>35.1</td><td>1454468</td><td>77.7</td><td>1321191</td><td>70.6</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1219191</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
+              "</tbody>\n",
+              "</table>\n"
+            ],
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  656417 | 35.1 | 1454468 | 77.7 | 1321191 | 70.6 |\n| Vcells | 1219191 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  656417 & 35.1 & 1454468 & 77.7 & 1321191 & 70.6\\\\\n\tVcells & 1219191 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/plain": [
+              "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+              "Ncells  656417 35.1 1454468    77.7 1321191  70.6\n",
+              "Vcells 1219191  9.4 8388608    64.0 1975128  15.1"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -265,10 +321,36 @@
         "require(\"primes\")"
       ],
       "metadata": {
-        "id": "JO-12d7YHkWy"
+        "id": "JO-12d7YHkWy",
+        "outputId": "243f3dca-f1c3-4ec7-ef46-d0b15ac86fc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Loading required package: data.table\n",
+            "\n",
+            "Loading required package: rpart\n",
+            "\n",
+            "Loading required package: parallel\n",
+            "\n",
+            "Loading required package: primes\n",
+            "\n",
+            "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+            "“there is no package called ‘primes’”\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Loading required package: primes\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -295,7 +377,7 @@
       "metadata": {
         "id": "Vt5fC6bWHu5r"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -321,7 +403,7 @@
       "metadata": {
         "id": "Z1dchsrWH4MD"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -377,7 +459,7 @@
       "metadata": {
         "id": "xsHwS1CzIA70"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -400,7 +482,7 @@
       "metadata": {
         "id": "BvBVOuhqIEjD"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -416,7 +498,7 @@
       "metadata": {
         "id": "L-DOGHOjIG7G"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -431,7 +513,7 @@
       "metadata": {
         "id": "NM-mrLWcIPo6"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -447,7 +529,7 @@
       "metadata": {
         "id": "tSlY0EcgIWdi"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -472,10 +554,30 @@
         "nrow( tb_grid_search_detalle )"
       ],
       "metadata": {
-        "id": "xxCAwIKyIaTl"
+        "id": "xxCAwIKyIaTl",
+        "outputId": "07621f28-f7ca-489f-f1f5-6d58e695bdb2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "288"
+            ],
+            "text/markdown": "288",
+            "text/latex": "288",
+            "text/plain": [
+              "[1] 288"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -529,10 +631,146 @@
         "}\n"
       ],
       "metadata": {
-        "id": "ipLHm3STIfmb"
+        "id": "ipLHm3STIfmb",
+        "outputId": "f86d3fa8-771a-4cb5-c9bf-2e0cd7f47e63",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# itero por los loops anidados para cada hiperparametro\n",
+        "iter <- 0\n",
+        "for (vcp in c(-1, -0.5, 0, 0.001, 0.01)) {\n",
+        "  for (vmax_depth in c(4, 6, 8, 10, 12, 14)) {\n",
+        "    for (vmin_split in c(1000, 800, 600, 400, 200, 100, 50, 20, 10)) {\n",
+        "      for (vminbucket in c(5, 10, 20, 50, 100)) {\n",
+        "        # notar como se agrega\n",
+        "\n",
+        "        iter <- iter + 1\n",
+        "        cat( iter, \" \" )\n",
+        "        flush.console()\n",
+        "        if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
+        "\n",
+        "        # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
+        "        param_basicos <- list(\n",
+        "          \"cp\" = vcp, # complejidad minima\n",
+        "          \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
+        "          \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
+        "          \"minbucket\" = vminbucket # minima cantidad de registros en una hoja\n",
+        "        )\n",
+        "\n",
+        "        # Un solo llamado, con la semilla 17\n",
+        "        ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "\n",
+        "        # agrego a la tabla\n",
+        "        tb_grid_search_detalle <- rbindlist(\n",
+        "          list( tb_grid_search_detalle,\n",
+        "                rbindlist(ganancias) )\n",
+        "        )\n",
+        "\n",
+        "      }\n",
+        "    }\n",
+        "  }\n",
+        "\n",
+        "  # grabo cada vez TODA la tabla en el loop mas externo\n",
+        "  fwrite( tb_grid_search_detalle,\n",
+        "          file = \"gridsearch_detalle.txt\",\n",
+        "          sep = \"\\t\" )\n",
+        "}\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b14d1476-beab-41bb-a657-8a024edb1066",
+        "id": "y9UI8VMWdZAj"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  130  131  132  133  134  135  136  137  138  139  140  141  142  143  144  145  146  147  148  149  150  151  152  153  154  155  156  157  158  159  160  161  162  163  164  165  166  167  168  169  170  171  172  173  174  175  176  177  178  179  180  181  182  183  184  185  186  187  188  189  190  191  192  193  194  195  196  197  198  199  200  201  202  203  204  205  206  207  208  209  210  211  212  213  214  215  216  217  218  219  220  221  222  223  224  225  226  227  228  229  230  231  232  233  234  235  236  237  238  239  240  241  242  243  244  245  246  247  248  249  250  251  252  253  254  255  256  257  258  259  260  261  262  263  264  265  266  267  268  269  270  271  272  273  274  275  276  277  278  279  280  281  282  283  284  285  286  287  288  289  290  291  292  293  294  295  296  297  298  299  300  301  302  303  304  305  306  307  308  309  310  311  312  313  314  315  316  317  318  319  320  321  322  323  324  325  326  327  328  329  330  331  332  333  334  335  336  337  338  339  340  341  342  343  344  345  346  347  348  349  350  351  352  353  354  355  356  357  358  359  360  361  362  363  364  365  366  367  368  369  370  371  372  373  374  375  376  377  378  379  380  381  382  383  384  385  386  387  388  389  390  391  392  393  394  395  396  397  398  399  400  401  402  403  404  405  406  407  408  409  410  411  412  413  414  415  416  417  418  419  420  421  422  423  424  425  426  427  428  429  430  431  432  433  434  435  436  437  438  439  "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# itero por los loops anidados para cada hiperparametro\n",
+        "iter <- 0\n",
+        "for (vcp in c(-1, -0.5, 0, 0.001, 0.01)) {\n",
+        "  for (vmax_depth in c(4, 6, 8, 10, 12, 14)) {\n",
+        "    for (vmin_split in c(1000, 800, 600, 400, 200, 100, 50, 20, 10)) {\n",
+        "      for (vminbucket in c(5, 10, 20, 50, 100)) {\n",
+        "        # notar como se agrega\n",
+        "\n",
+        "        iter <- iter + 1\n",
+        "        cat( iter, \" \" )\n",
+        "        flush.console()\n",
+        "        if( iter*PARAM$qsemillas < nrow(tb_grid_search_detalle)+1 ) next\n",
+        "\n",
+        "        # vminsplit  minima cantidad de registros en un nodo para hacer el split\n",
+        "        param_basicos <- list(\n",
+        "          \"cp\" = vcp, # complejidad minima\n",
+        "          \"maxdepth\" = vmax_depth, # profundidad máxima del arbol\n",
+        "          \"minsplit\" = vmin_split, # tamaño minimo de nodo para hacer split\n",
+        "          \"minbucket\" = vminbucket # minima cantidad de registros en una hoja\n",
+        "        )\n",
+        "\n",
+        "        # Un solo llamado, con la semilla 17\n",
+        "        ganancias <- ArbolesMontecarlo(PARAM$semillas, param_basicos)\n",
+        "\n",
+        "        # agrego a la tabla\n",
+        "        tb_grid_search_detalle <- rbindlist(\n",
+        "          list( tb_grid_search_detalle,\n",
+        "                rbindlist(ganancias) )\n",
+        "        )\n",
+        "\n",
+        "      }\n",
+        "    }\n",
+        "  }\n",
+        "\n",
+        "  # grabo cada vez TODA la tabla en el loop mas externo\n",
+        "  fwrite( tb_grid_search_detalle,\n",
+        "          file = \"gridsearch_detalle.txt\",\n",
+        "          sep = \"\\t\" )\n",
+        "}\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4206aa8c-4877-4c09-9815-631fa8fc0960",
+        "id": "jYm0clGvccxI"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1  2  3  4  5  6  7  8  9  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99  100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  117  118  119  120  121  122  123  124  125  126  127  128  129  130  131  132  133  134  135  136  137  138  139  140  141  142  143  144  145  146  147  148  149  150  151  152  153  154  155  156  157  158  159  160  161  162  163  164  165  166  167  168  169  170  171  172  173  174  175  176  177  178  179  180  181  182  183  184  185  186  187  188  189  190  191  192  193  194  195  196  197  198  199  200  201  202  203  204  205  206  207  208  209  210  211  212  213  214  215  216  217  218  219  220  221  222  223  224  225  226  227  228  229  230  231  232  233  234  235  236  237  238  239  240  241  242  243  244  245  246  247  248  249  250  251  252  253  254  255  256  257  258  259  260  261  262  263  264  265  266  267  268  269  270  271  272  273  274  275  276  277  278  279  280  281  282  283  284  285  286  287  288  289  "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
