--- a/src/ensembles/494_TareaHogar_04_exp1.ipynb
+++ b/src/ensembles/494_TareaHogar_04_exp1.ipynb
@@ -257,22 +257,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "gBq__iAdQliq"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'Tue Jul 22 20:00:20 2025'"
+      ],
+      "text/latex": [
+       "'Tue Jul 22 20:00:20 2025'"
+      ],
+      "text/markdown": [
+       "'Tue Jul 22 20:00:20 2025'"
+      ],
+      "text/plain": [
+       "[1] \"Tue Jul 22 20:00:20 2025\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "format(Sys.time(), \"%a %b %d %X %Y\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "7rdVrBojS1IV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 656846</td><td>35.1</td><td>1435131</td><td>76.7</td><td>1435131</td><td>76.7</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1224771</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1924961</td><td>14.7</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  656846 & 35.1 & 1435131 & 76.7 & 1435131 & 76.7\\\\\n",
+       "\tVcells & 1224771 &  9.4 & 8388608 & 64.0 & 1924961 & 14.7\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  656846 | 35.1 | 1435131 | 76.7 | 1435131 | 76.7 |\n",
+       "| Vcells | 1224771 |  9.4 | 8388608 | 64.0 | 1924961 | 14.7 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  656846 35.1 1435131    76.7 1435131  76.7\n",
+       "Vcells 1224771  9.4 8388608    64.0 1924961  14.7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# limpio la memoria\n",
     "rm(list=ls(all.names=TRUE)) # remove all objects\n",
@@ -290,11 +352,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "lVyxLaJ1j1J_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: data.table\n",
+      "\n",
+      "Loading required package: parallel\n",
+      "\n",
+      "Loading required package: primes\n",
+      "\n",
+      "Loading required package: rlist\n",
+      "\n",
+      "Loading required package: yaml\n",
+      "\n",
+      "Loading required package: lightgbm\n",
+      "\n",
+      "Loading required package: DiceKriging\n",
+      "\n",
+      "Loading required package: mlrMBO\n",
+      "\n",
+      "Loading required package: mlr\n",
+      "\n",
+      "Loading required package: ParamHelpers\n",
+      "\n",
+      "Loading required package: smoof\n",
+      "\n",
+      "Loading required package: checkmate\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘checkmate’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:DiceKriging’:\n",
+      "\n",
+      "    checkNames\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# cargo las librerias que necesito\n",
     "require(\"data.table\")\n",
@@ -343,20 +445,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "ASYkebOu2mF6"
    },
    "outputs": [],
    "source": [
     "PARAM <- list()\n",
-    "PARAM$experimento <- 4940\n",
-    "PARAM$semilla_primigenia <- 102191\n"
+    "PARAM$experimento <- 4941\n",
+    "PARAM$semilla_primigenia <- 100129\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "ezOhQdbA293o"
    },
@@ -368,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "jtB0Lub42rHO"
    },
@@ -382,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "OFxm-xiNUOJX"
    },
@@ -446,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "jENpR26ZyuS8"
    },
@@ -454,11 +556,16 @@
    "source": [
     "# Aqui se cargan los bordes de los hiperparametros de la BO\n",
     "PARAM$hypeparametertuning$hs <- makeParamSet(\n",
-    "  makeIntegerParam(\"num_iterations\", lower= 8L, upper= 2048L),\n",
-    "  makeNumericParam(\"learning_rate\", lower= 0.01, upper= 0.3),\n",
-    "  makeNumericParam(\"feature_fraction\", lower= 0.1, upper= 1.0),\n",
-    "  makeIntegerParam(\"num_leaves\", lower= 8L, upper= 2048L),\n",
-    "  makeIntegerParam(\"min_data_in_leaf\", lower= 1L, upper= 8000L)\n",
+    "  makeIntegerParam(\"num_iterations\", lower=300L, upper=1500L),\n",
+    "  makeNumericParam(\"learning_rate\", lower=0.01, upper=0.1),\n",
+    "  makeNumericParam(\"feature_fraction\", lower=0.3, upper=1.0),\n",
+    "  makeIntegerParam(\"min_data_in_leaf\", lower=100L, upper=5000L),\n",
+    "  makeIntegerParam(\"num_leaves\", lower=20L, upper=512L),\n",
+    "  makeIntegerParam(\"max_depth\", lower=3L, upper=16L),\n",
+    "  makeNumericParam(\"lambda_l1\", lower=0.0, upper=5.0),\n",
+    "  makeNumericParam(\"lambda_l2\", lower=0.0, upper=5.0),\n",
+    "  makeNumericParam(\"min_gain_to_split\", lower=0.0, upper=1.0),\n",
+    "  makeNumericParam(\"bagging_fraction\", lower=0.5, upper=1.0)\n",
     ")"
    ]
   },
@@ -475,13 +582,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "q5Rd3pnbzSiG"
    },
    "outputs": [],
    "source": [
-    "PARAM$hyperparametertuning$iteraciones <- 30 # iteraciones bayesianas"
+    "PARAM$hyperparametertuning$iteraciones <- 50 # iteraciones bayesianas"
    ]
   },
   {
@@ -495,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "j3toG9-lZm4K"
    },
@@ -511,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "FM3lxKoLZ643"
    },
@@ -524,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "OsJ-91UeZ-I_"
    },
@@ -535,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "vrWE7BE0aB2J"
    },
@@ -551,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "jP7YlQBnaW6W"
    },
@@ -574,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "xElu4s5W4rX7"
    },
@@ -590,11 +697,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "PppMHcGYaaol"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "83679"
+      ],
+      "text/latex": [
+       "83679"
+      ],
+      "text/markdown": [
+       "83679"
+      ],
+      "text/plain": [
+       "[1] 83679"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "154"
+      ],
+      "text/latex": [
+       "154"
+      ],
+      "text/markdown": [
+       "154"
+      ],
+      "text/plain": [
+       "[1] 154"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# dejo los datos en el formato que necesita LightGBM\n",
     "\n",
@@ -619,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "cjgfurjdfiXb"
    },
@@ -656,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "WLi_o1hocvN-"
    },
@@ -722,7 +866,26 @@
    "metadata": {
     "id": "RcABNaKGciaz"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing y column(s) for design. Not provided.\n",
+      "\n",
+      "Tue Jul 22 20:01:41 2025 AUC 0.93072029639593\n",
+      "\n",
+      "Tue Jul 22 20:01:51 2025 AUC 0.926079083105392\n",
+      "\n",
+      "Tue Jul 22 20:02:01 2025 AUC 0.92691202732511\n",
+      "\n",
+      "Tue Jul 22 20:02:23 2025 AUC 0.927047532864942\n",
+      "\n",
+      "Tue Jul 22 20:02:44 2025 AUC 0.92552938514974\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# inicio la optimizacion bayesiana, retomando si ya existe\n",
     "# es la celda mas lenta de todo el notebook\n",
@@ -1153,12 +1316,18 @@
   },
   "kernelspec": {
    "display_name": "R",
+   "language": "R",
    "name": "ir"
   },
   "language_info": {
-   "name": "R"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.4.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
