fin exp5 + init exp6

--- a/src/ensembles/494_TareaHogar_04_exp5.ipynb
+++ b/src/ensembles/494_TareaHogar_04_exp5.ipynb
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "lZ3sLmbh0kFj"
    },
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "id": "PimBY3N_0ryP"
    },
@@ -1901,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "RJwg7LHd11yu"
    },
@@ -1930,11 +1930,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "id": "gWW3tatE12je"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully submitted to Data Mining, Analista Sr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Sr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Sr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Sr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Sr 2025A \n"
+     ]
+    }
+   ],
    "source": [
     "# genero archivos con los  \"envios\" mejores\n",
     "# suba TODOS los archivos a Kaggle\n",
@@ -1975,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "id": "B9tB2X4439Hg"
    },
@@ -1986,11 +1998,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "id": "9zA_W25c15DP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'Wed Jul 23 22:25:23 2025'"
+      ],
+      "text/latex": [
+       "'Wed Jul 23 22:25:23 2025'"
+      ],
+      "text/markdown": [
+       "'Wed Jul 23 22:25:23 2025'"
+      ],
+      "text/plain": [
+       "[1] \"Wed Jul 23 22:25:23 2025\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "format(Sys.time(), \"%a %b %d %X %Y\")"
    ]
