--- a/src/ensembles/494_TareaHogar_04_exp7.ipynb
+++ b/src/ensembles/494_TareaHogar_04_exp7.ipynb
@@ -257,22 +257,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "gBq__iAdQliq"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'Thu Jul 24 18:55:23 2025'"
+      ],
+      "text/latex": [
+       "'Thu Jul 24 18:55:23 2025'"
+      ],
+      "text/markdown": [
+       "'Thu Jul 24 18:55:23 2025'"
+      ],
+      "text/plain": [
+       "[1] \"Thu Jul 24 18:55:23 2025\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "format(Sys.time(), \"%a %b %d %X %Y\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "7rdVrBojS1IV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 656930</td><td>35.1</td><td>1439374</td><td>76.9</td><td>1431359</td><td>76.5</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1224911</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1924961</td><td>14.7</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  656930 & 35.1 & 1439374 & 76.9 & 1431359 & 76.5\\\\\n",
+       "\tVcells & 1224911 &  9.4 & 8388608 & 64.0 & 1924961 & 14.7\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  656930 | 35.1 | 1439374 | 76.9 | 1431359 | 76.5 |\n",
+       "| Vcells | 1224911 |  9.4 | 8388608 | 64.0 | 1924961 | 14.7 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  656930 35.1 1439374    76.9 1431359  76.5\n",
+       "Vcells 1224911  9.4 8388608    64.0 1924961  14.7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# limpio la memoria\n",
     "rm(list=ls(all.names=TRUE)) # remove all objects\n",
@@ -290,11 +352,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "lVyxLaJ1j1J_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: data.table\n",
+      "\n",
+      "Loading required package: parallel\n",
+      "\n",
+      "Loading required package: primes\n",
+      "\n",
+      "Loading required package: rlist\n",
+      "\n",
+      "Loading required package: yaml\n",
+      "\n",
+      "Loading required package: lightgbm\n",
+      "\n",
+      "Loading required package: DiceKriging\n",
+      "\n",
+      "Loading required package: mlrMBO\n",
+      "\n",
+      "Loading required package: mlr\n",
+      "\n",
+      "Loading required package: ParamHelpers\n",
+      "\n",
+      "Loading required package: smoof\n",
+      "\n",
+      "Loading required package: checkmate\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘checkmate’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:DiceKriging’:\n",
+      "\n",
+      "    checkNames\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# cargo las librerias que necesito\n",
     "require(\"data.table\")\n",
@@ -343,20 +445,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "ASYkebOu2mF6"
    },
    "outputs": [],
    "source": [
     "PARAM <- list()\n",
-    "PARAM$experimento <- 4940\n",
-    "PARAM$semilla_primigenia <- 102191\n"
+    "PARAM$experimento <- 4947\n",
+    "PARAM$semilla_primigenia <- 100129\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "ezOhQdbA293o"
    },
@@ -368,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "jtB0Lub42rHO"
    },
@@ -382,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "OFxm-xiNUOJX"
    },
@@ -446,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "jENpR26ZyuS8"
    },
@@ -454,11 +556,16 @@
    "source": [
     "# Aqui se cargan los bordes de los hiperparametros de la BO\n",
     "PARAM$hypeparametertuning$hs <- makeParamSet(\n",
-    "  makeIntegerParam(\"num_iterations\", lower= 8L, upper= 2048L),\n",
-    "  makeNumericParam(\"learning_rate\", lower= 0.01, upper= 0.3),\n",
-    "  makeNumericParam(\"feature_fraction\", lower= 0.1, upper= 1.0),\n",
-    "  makeIntegerParam(\"num_leaves\", lower= 8L, upper= 2048L),\n",
-    "  makeIntegerParam(\"min_data_in_leaf\", lower= 1L, upper= 8000L)\n",
+    "  makeIntegerParam(\"num_iterations\", lower = 500L, upper = 900L),\n",
+    "  makeNumericParam(\"learning_rate\", lower = 0.025, upper = 0.045),\n",
+    "  makeNumericParam(\"feature_fraction\", lower = 0.40, upper = 0.50),\n",
+    "  makeIntegerParam(\"min_data_in_leaf\", lower = 350L, upper = 600L),\n",
+    "  makeIntegerParam(\"num_leaves\", lower = 80L, upper = 160L),\n",
+    "  makeIntegerParam(\"max_depth\", lower = 6L, upper = 10L),\n",
+    "  makeNumericParam(\"lambda_l1\", lower = 4.0, upper = 7.0),\n",
+    "  makeNumericParam(\"lambda_l2\", lower = 3.0, upper = 5.0),\n",
+    "  makeNumericParam(\"min_gain_to_split\", lower = 0.15, upper = 0.35),\n",
+    "  makeNumericParam(\"bagging_fraction\", lower = 0.75, upper = 0.90)\n",
     ")"
    ]
   },
@@ -475,13 +582,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "q5Rd3pnbzSiG"
    },
    "outputs": [],
    "source": [
-    "PARAM$hyperparametertuning$iteraciones <- 30 # iteraciones bayesianas"
+    "PARAM$hyperparametertuning$iteraciones <- 100 # iteraciones bayesianas"
    ]
   },
   {
@@ -1153,12 +1260,18 @@
   },
   "kernelspec": {
    "display_name": "R",
+   "language": "R",
    "name": "ir"
   },
   "language_info": {
-   "name": "R"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.4.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
