--- a/src/CazaTalentos/CazaTalentos_v1.ipynb
+++ b/src/CazaTalentos/CazaTalentos_v1.ipynb
@@ -154,7 +154,7 @@
           "height": 34
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +296,7 @@
           "height": 89
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -398,7 +398,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +489,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +575,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -654,7 +654,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,7 +749,7 @@
         },
         "outputId": "a5aeadb6-1d42-45dd-972c-c097e48e04a7"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,7 +927,7 @@
           "height": 74
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -963,6 +963,439 @@
       ],
       "metadata": {
         "id": "WO9JHCzXF-9w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Resolución**"
+      ],
+      "metadata": {
+        "id": "qrlMgfo3Bi1_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "set.seed(102191)\n",
+        "\n",
+        "# función para tirar\n",
+        "ftirar <- function(prob, qty) {\n",
+        "  return(sum(runif(qty) < prob))\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "a7kcvjG46kES"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Análisis de cada Cazatalentos**\n",
+        "Para resolver este problema, necesito estimar cuál es la probabilidad REAL\n",
+        "de enceste de cada candidata, no solo confiar en el 80/100 que todas lograron\n",
+        "\n",
+        "El truco está en entender que:\n",
+        "- Si una jugadora gana entre muchas, probablemente tuvo suerte\n",
+        "- Si una jugadora es elegida sin competir, su resultado es más confiable\n",
+        "- Si reportan solo la mejor de varias rondas, es trampa"
+      ],
+      "metadata": {
+        "id": "G0x4afewBTt1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Cazatalentos 5**"
+      ],
+      "metadata": {
+        "id": "KOhiAF3xB6E2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# C5 es fácil de analizar porque conozco TODAS sus rondas\n",
+        "aciertos_c5 <- c(68, 74, 78, 70, 68, 63, 80, 68, 67, 65)\n",
+        "promedio_c5 <- sum(aciertos_c5) / 10\n",
+        "cat(\"C5 - Promedio real de todas las rondas:\", promedio_c5, \"\\n\")\n",
+        "cat(\"C5 - Probabilidad real estimada:\", promedio_c5/100, \"\\n\")"
+      ],
+      "metadata": {
+        "id": "uCjRe63EBR7a",
+        "outputId": "f9a7a7a1-2609-4410-fe07-24294356d4e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "C5 - Promedio real de todas las rondas: 70.1 \n",
+            "C5 - Probabilidad real estimada: 0.701 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Simulo competencias para estimar las probabilidades reales**"
+      ],
+      "metadata": {
+        "id": "SZRvbPDmCGz1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para los otros casos, voy a simular qué probabilidad real debería tener una jugadora para que, compitiendo contra N otras, tenga buenas chances de ganar con 80/100"
+      ],
+      "metadata": {
+        "id": "tIthIKctCMR4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# función para simular un torneo y ver si una jugadora con prob_real gana con 80+ aciertos\n",
+        "simular_torneo <- function(prob_real, n_competidoras, tiros_por_jugadora) {\n",
+        "\n",
+        "  aciertos_candidata <- ftirar(prob_real, tiros_por_jugadora) # la jugadora que me interesa\n",
+        "\n",
+        "  # las otras jugadoras del pelotón (asumo que tienen probabilidades menores)\n",
+        "  max_aciertos_peloton <- 0\n",
+        "  for(i in 1:n_competidoras) {\n",
+        "    prob_peloton <- runif(1, 0.5, prob_real - 0.05)  # hago que sean un poco peores que la candidata\n",
+        "    aciertos_peloton <- ftirar(prob_peloton, tiros_por_jugadora)\n",
+        "    if(aciertos_peloton > max_aciertos_peloton) {\n",
+        "      max_aciertos_peloton <- aciertos_peloton\n",
+        "    }\n",
+        "  }\n",
+        "\n",
+        "  # devuelvo TRUE si mi candidata ganó con 80+ aciertos\n",
+        "  return(aciertos_candidata >= 80 && aciertos_candidata > max_aciertos_peloton)\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "VA05iIF3B-xI"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Para cada cazatalentos, encuentro qué probabilidad real hace que sea creíble ganar con 80/100\n",
+        "\n",
+        "# C1: 100 competidoras\n",
+        "exitos_c1 <- 0\n",
+        "for(prob_test in seq(0.75, 0.85, 0.01)) {\n",
+        "  exitos <- 0\n",
+        "  for(i in 1:1000) {\n",
+        "    if(simular_torneo(prob_test, 99, 100)) exitos <- exitos + 1\n",
+        "  }\n",
+        "  if(exitos > 100) {  # si es creíble que gane con esta probabilidad\n",
+        "    prob_real_c1 <- prob_test\n",
+        "    break\n",
+        "  }\n",
+        "}\n",
+        "\n",
+        "# C2: 200 competidoras (más difícil ganar sin suerte)\n",
+        "for(prob_test in seq(0.78, 0.88, 0.01)) {\n",
+        "  exitos <- 0\n",
+        "  for(i in 1:1000) {\n",
+        "    if(simular_torneo(prob_test, 199, 100)) exitos <- exitos + 1\n",
+        "  }\n",
+        "  if(exitos > 100) {\n",
+        "    prob_real_c2 <- prob_test\n",
+        "    break\n",
+        "  }\n",
+        "}\n",
+        "\n",
+        "# C3: sin competencia, resultado directo\n",
+        "prob_real_c3 <- 80/100  # es lo que realmente tiró\n",
+        "\n",
+        "# C4: Solo 2 competidoras\n",
+        "for(prob_test in seq(0.72, 0.82, 0.01)) {\n",
+        "  exitos <- 0\n",
+        "  for(i in 1:1000) {\n",
+        "    if(simular_torneo(prob_test, 1, 100)) exitos <- exitos + 1\n",
+        "  }\n",
+        "  if(exitos > 200) {  # más fácil con menos competencia\n",
+        "    prob_real_c4 <- prob_test\n",
+        "    break\n",
+        "  }\n",
+        "}\n",
+        "\n",
+        "# C5: ya la calculé antes\n",
+        "prob_real_c5 <- promedio_c5/100\n",
+        "\n",
+        "cat(\"Probabilidades reales estimadas:\\n\")\n",
+        "cat(\"C1 (100 competidoras):\", prob_real_c1, \"\\n\")\n",
+        "cat(\"C2 (200 competidoras):\", prob_real_c2, \"\\n\")\n",
+        "cat(\"C3 (sin competencia):\", prob_real_c3, \"\\n\")\n",
+        "cat(\"C4 (2 competidoras):\", prob_real_c4, \"\\n\")\n",
+        "cat(\"C5 (trampa):\", prob_real_c5, \"\\n\")"
+      ],
+      "metadata": {
+        "id": "ytCPZIY8Cv_g",
+        "outputId": "5ac54a30-0a85-4605-aa0a-2df010ee4998",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Probabilidades reales estimadas:\n",
+            "C1 (100 competidoras): 0.75 \n",
+            "C2 (200 competidoras): 0.78 \n",
+            "C3 (sin competencia): 0.8 \n",
+            "C4 (2 competidoras): 0.77 \n",
+            "C5 (trampa): 0.701 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Simulo rendimiento futuro**\n",
+        "Ahora simulo como les iría en una nueva ronda de 100 tiros"
+      ],
+      "metadata": {
+        "id": "iX2wqBf8DwQV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "suma_c1 <- 0\n",
+        "suma_c2 <- 0\n",
+        "suma_c3 <- 0\n",
+        "suma_c4 <- 0\n",
+        "suma_c5 <- 0\n",
+        "\n",
+        "for(i in 1:10000) {\n",
+        "  suma_c1 <- suma_c1 + ftirar(prob_real_c1, 100)\n",
+        "  suma_c2 <- suma_c2 + ftirar(prob_real_c2, 100)\n",
+        "  suma_c3 <- suma_c3 + ftirar(prob_real_c3, 100)\n",
+        "  suma_c4 <- suma_c4 + ftirar(prob_real_c4, 100)\n",
+        "  suma_c5 <- suma_c5 + ftirar(prob_real_c5, 100)\n",
+        "}\n",
+        "\n",
+        "promedio_futuro_c1 <- suma_c1 / 10000\n",
+        "promedio_futuro_c2 <- suma_c2 / 10000\n",
+        "promedio_futuro_c3 <- suma_c3 / 10000\n",
+        "promedio_futuro_c4 <- suma_c4 / 10000\n",
+        "promedio_futuro_c5 <- suma_c5 / 10000\n",
+        "\n",
+        "cat(\"Aciertos esperados en nueva ronda de 100 tiros:\\n\")\n",
+        "cat(\"C1:\", promedio_futuro_c1, \"\\n\")\n",
+        "cat(\"C2:\", promedio_futuro_c2, \"\\n\")\n",
+        "cat(\"C3:\", promedio_futuro_c3, \"\\n\")\n",
+        "cat(\"C4:\", promedio_futuro_c4, \"\\n\")\n",
+        "cat(\"C5:\", promedio_futuro_c5, \"\\n\")"
+      ],
+      "metadata": {
+        "id": "wiuVhwbUDvnZ",
+        "outputId": "88cd6751-d30e-48e0-8da5-74613cd88b72",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aciertos esperados en nueva ronda de 100 tiros:\n",
+            "C1: 75.0133 \n",
+            "C2: 77.9905 \n",
+            "C3: 79.9245 \n",
+            "C4: 76.9999 \n",
+            "C5: 70.1173 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ahora comparo de a pares para determinar el orden de las candidatas. Esta simulación consiste en elegirlas de a pares y hacer un torneo de 100 tiros entre ellas. Repito dicho torneo 10.000 en cada par y me quedo con la mejor. De esta forma, las puedo ordenar de menor a mayor."
+      ],
+      "metadata": {
+        "id": "n39izFKBBRSf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz_victorias <- matrix(0, 5, 5)\n",
+        "probs_reales <- c(prob_real_c1, prob_real_c2, prob_real_c3, prob_real_c4, prob_real_c5)\n",
+        "\n",
+        "# hago todas las comparaciones de a pares posibles\n",
+        "for(i in 1:5) {\n",
+        "  for(j in 1:5) {\n",
+        "    if(i != j) {\n",
+        "      victorias_i <- 0\n",
+        "      for(sim in 1:10000) {\n",
+        "        aciertos_i <- ftirar(probs_reales[i], 100)\n",
+        "        aciertos_j <- ftirar(probs_reales[j], 100)\n",
+        "        if(aciertos_i > aciertos_j) victorias_i <- victorias_i + 1\n",
+        "      }\n",
+        "      matriz_victorias[i,j] <- victorias_i # me guardo la cantidad de veces que le ganó i a j\n",
+        "      cat(\"C\", i, \" vs C\", j, \": C\", i, \" gana \", victorias_i, \" veces de 10000\\n\", sep=\"\")\n",
+        "    }\n",
+        "  }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "aFH4fmBPD-2X",
+        "outputId": "1b7e9144-f44c-4a6b-85a4-5c295b62f1e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "C1 vs C2: C1 gana 2810 veces de 10000\n",
+            "C1 vs C3: C1 gana 1781 veces de 10000\n",
+            "C1 vs C4: C1 gana 3389 veces de 10000\n",
+            "C1 vs C5: C1 gana 7555 veces de 10000\n",
+            "C2 vs C1: C2 gana 6668 veces de 10000\n",
+            "C2 vs C3: C2 gana 3229 veces de 10000\n",
+            "C2 vs C4: C2 gana 5346 veces de 10000\n",
+            "C2 vs C5: C2 gana 8815 veces de 10000\n",
+            "C3 vs C1: C3 gana 7732 veces de 10000\n",
+            "C3 vs C2: C3 gana 5980 veces de 10000\n",
+            "C3 vs C4: C3 gana 6661 veces de 10000\n",
+            "C3 vs C5: C3 gana 9398 veces de 10000\n",
+            "C4 vs C1: C4 gana 6011 veces de 10000\n",
+            "C4 vs C2: C4 gana 4043 veces de 10000\n",
+            "C4 vs C3: C4 gana 2675 veces de 10000\n",
+            "C4 vs C5: C4 gana 8422 veces de 10000\n",
+            "C5 vs C1: C5 gana 1964 veces de 10000\n",
+            "C5 vs C2: C5 gana 847 veces de 10000\n",
+            "C5 vs C3: C5 gana 481 veces de 10000\n",
+            "C5 vs C4: C5 gana 1208 veces de 10000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Conclusión**"
+      ],
+      "metadata": {
+        "id": "dtdaSTh9Estr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Luego de compararlas de a pares, determino el orden segun esos resultados."
+      ],
+      "metadata": {
+        "id": "uAeZ-3C-HhrE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "puntos <- c(0, 0, 0, 0, 0)\n",
+        "for(i in 1:5) {\n",
+        "  for(j in 1:5) {\n",
+        "    if(i != j && matriz_victorias[i,j] > 5000) {\n",
+        "      puntos[i] <- puntos[i] + 1\n",
+        "    }\n",
+        "  }\n",
+        "}\n",
+        "\n",
+        "cat(\"\\nPuntuación total (a cuántas candidatas le gana cada una):\\n\")\n",
+        "for(i in 1:5) {\n",
+        "  cat(\"C\", i, \": \", puntos[i], \" victorias\\n\", sep=\"\")\n",
+        "}\n",
+        "\n",
+        "# Ordenamiento basado en puntuación (de menor a mayor puntos)\n",
+        "cat(\"\\nOrdenamiento final de PEOR a MEJOR (basado en comparaciones pareadas):\\n\")\n",
+        "\n",
+        "# Encontramos manualmente el orden\n",
+        "candidatas_ordenadas <- character(5)\n",
+        "puntos_usados <- rep(FALSE, 5)\n",
+        "\n",
+        "for(posicion in 1:5) {\n",
+        "  min_puntos <- 5  # Máximo posible + 1\n",
+        "  candidata_min <- 0\n",
+        "\n",
+        "  for(i in 1:5) {\n",
+        "    if(!puntos_usados[i] && puntos[i] < min_puntos) {\n",
+        "      min_puntos <- puntos[i]\n",
+        "      candidata_min <- i\n",
+        "    }\n",
+        "  }\n",
+        "\n",
+        "  candidatas_ordenadas[posicion] <- paste0(\"C\", candidata_min)\n",
+        "  puntos_usados[candidata_min] <- TRUE\n",
+        "}\n",
+        "\n",
+        "cat(paste(candidatas_ordenadas, collapse=\" < \"), \"\\n\")"
+      ],
+      "metadata": {
+        "id": "Hy46TQfGErml",
+        "outputId": "5bf67783-2635-44ca-bbbc-8360704beb12",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Puntuación total (a cuántas candidatas le gana cada una):\n",
+            "C1: 1 victorias\n",
+            "C2: 3 victorias\n",
+            "C3: 4 victorias\n",
+            "C4: 2 victorias\n",
+            "C5: 0 victorias\n",
+            "\n",
+            "Ordenamiento final de PEOR a MEJOR (basado en comparaciones pareadas):\n",
+            "C5 < C1 < C4 < C2 < C3 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Explicación:\n",
+        "- C5 es la peor porque hizo trampa (eligió la mejor de 10 rondas)\n",
+        "- C2 es peor que C1 porque compitió contra más jugadoras (200 vs 100)\n",
+        "- C1 sufrió la 'Maldición del ganador' por competir contra 99\n",
+        "- C4 compitió solo contra 1, menos efecto suerte\n",
+        "- C3 es la mejor porque no hubo competencia, resultado puro"
+      ],
+      "metadata": {
+        "id": "JYzpYz6sEp4S"
       }
     }
   ]
