parametrizacion de los lags

--- a/src/FEhist Exp/WF_junior_base.ipynb
+++ b/src/FEhist Exp/WF_junior_base.ipynb
@@ -1304,6 +1304,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "208ed4a4-c708-4e4a-96a4-b101e8161a0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parametros de Feature Engineering Historico de lags\n",
+    "PARAM$FEhist$usar_lags <- TRUE # TRUE: activa uso de lags; FALSE caso contrario.\n",
+    "PARAM$FEhist$lag_config <- list(\n",
+    "    lag1_activo = TRUE, # TRUE: activa lag1; FALSE caso contrario.\n",
+    "    lag2_activo = TRUE, # TRUE: activa lag2; FALSE caso contrario.\n",
+    "    lag3_activo = TRUE  # TRUE: activa lag3; FALSE caso contrario.\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb3b64d7-4b5d-47ea-be93-be930dbb6822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parametros de Feature Engineering Historico de Tendencias\n",
+    "PARAM$FE_hist$Tendencias$run <- TRUE # esto activa las tendencias (usar_tendencias)\n",
+    "PARAM$FE_hist$Tendencias$ventana <- 6 # cantidad de meses: 6 o 12\n",
+    "PARAM$FE_hist$Tendencias$tendencia <- TRUE # ventana de tendencia segun la cantidad de meses\n",
+    "PARAM$FE_hist$Tendencias$minimo <- FALSE # ventana de minimo segun la cantidad de meses\n",
+    "PARAM$FE_hist$Tendencias$maximo <- FALSE # ventana de maximo segun la cantidad de meses\n",
+    "PARAM$FE_hist$Tendencias$promedio <- FALSE # ventana de promedio segun la cantidad de meses\n",
+    "PARAM$FE_hist$Tendencias$ratioavg <- FALSE # ventana del rationavg segun la cantidad de meses\n",
+    "PARAM$FE_hist$Tendencias$ratiomax <- FALSE # ventanta del ratiomax segun la cantidad de meses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7850b948-827d-4a2a-b4d3-a5e459b47c11",
    "metadata": {
     "id": "7850b948-827d-4a2a-b4d3-a5e459b47c11"
@@ -1320,46 +1354,44 @@
     "    c(\"numero_de_cliente\", \"foto_mes\", \"clase_ternaria\")\n",
     ") )\n",
     "\n",
-    "# https://rdrr.io/cran/data.table/man/shift.html\n",
-    "\n",
-    "# lags de orden 1\n",
-    "dataset[,\n",
-    "    paste0(cols_lagueables, \"_lag1\") := shift(.SD, 1, NA, \"lag\"),\n",
-    "    by = numero_de_cliente,\n",
-    "    .SDcols = cols_lagueables\n",
-    "]\n",
-    "\n",
-    "# lags de orden 2\n",
-    "dataset[,\n",
-    "    paste0(cols_lagueables, \"_lag2\") := shift(.SD, 2, NA, \"lag\"),\n",
-    "    by = numero_de_cliente,\n",
-    "    .SDcols = cols_lagueables\n",
-    "]\n",
-    "\n",
-    "# agrego los delta lags\n",
-    "for (vcol in cols_lagueables)\n",
-    "{\n",
-    "    dataset[, paste0(vcol, \"_delta1\") := get(vcol) - get(paste0(vcol, \"_lag1\"))]\n",
-    "    dataset[, paste0(vcol, \"_delta2\") := get(vcol) - get(paste0(vcol, \"_lag2\"))]\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb3b64d7-4b5d-47ea-be93-be930dbb6822",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parametros de Feature Engineering Historico de Tendencias\n",
-    "PARAM$FE_hist$Tendencias$run <- TRUE\n",
-    "PARAM$FE_hist$Tendencias$ventana <- 6 # cantidad de meses: 6 o 12\n",
-    "PARAM$FE_hist$Tendencias$tendencia <- TRUE\n",
-    "PARAM$FE_hist$Tendencias$minimo <- FALSE\n",
-    "PARAM$FE_hist$Tendencias$maximo <- FALSE\n",
-    "PARAM$FE_hist$Tendencias$promedio <- FALSE\n",
-    "PARAM$FE_hist$Tendencias$ratioavg <- FALSE\n",
-    "PARAM$FE_hist$Tendencias$ratiomax <- FALSE"
+    "if (isTRUE(PARAM$FEhist$usar_lags)) {\n",
+    "    \n",
+    "    # Lag 1\n",
+    "    if (isTRUE(PARAM$FEhist$lag_config$lag1_activo)) {\n",
+    "        dataset[,\n",
+    "            paste0(cols_lagueables, \"_lag1\") := shift(.SD, 1, NA, \"lag\"),\n",
+    "            by = numero_de_cliente,\n",
+    "            .SDcols = cols_lagueables\n",
+    "        ]\n",
+    "        for (vcol in cols_lagueables) {\n",
+    "            dataset[, paste0(vcol, \"_delta1\") := get(vcol) - get(paste0(vcol, \"_lag1\"))]\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    # Lag 2\n",
+    "    if (isTRUE(PARAM$FEhist$lag_config$lag2_activo)) {\n",
+    "        dataset[,\n",
+    "            paste0(cols_lagueables, \"_lag2\") := shift(.SD, 2, NA, \"lag\"),\n",
+    "            by = numero_de_cliente,\n",
+    "            .SDcols = cols_lagueables\n",
+    "        ]\n",
+    "        for (vcol in cols_lagueables) {\n",
+    "            dataset[, paste0(vcol, \"_delta2\") := get(vcol) - get(paste0(vcol, \"_lag2\"))]\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    # Lag 3\n",
+    "    if (isTRUE(PARAM$FEhist$lag_config$lag3_activo)) {\n",
+    "        dataset[,\n",
+    "            paste0(cols_lagueables, \"_lag3\") := shift(.SD, 3, NA, \"lag\"),\n",
+    "            by = numero_de_cliente,\n",
+    "            .SDcols = cols_lagueables\n",
+    "        ]\n",
+    "        for (vcol in cols_lagueables) {\n",
+    "            dataset[, paste0(vcol, \"_delta3\") := get(vcol) - get(paste0(vcol, \"_lag3\"))]\n",
+    "        }\n",
+    "    }\n",
+    "}"
    ]
   },
   {
