init exp 1 semilla 100129

--- a/src/FEhist Exp/100129/WF_01.ipynb
+++ b/src/FEhist Exp/100129/WF_01.ipynb
@@ -141,8 +141,50 @@
     "PARAM <- list()\n",
     "PARAM$semilla_primigenia <- 100129\n",
     "\n",
-    "PARAM$experimento <- 91001\n",
+    "PARAM$experimento <- 9100_01_100129\n",
     "PARAM$dataset <- \"analistajr_competencia_2025.csv.gz\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cb9402b0-82f1-43e3-bc4b-9236c9be273b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Configuración de NOTIFICACIONES MEDIANTE NTFY.SH\n",
+    "topic <- dm2025santi # CAMBIAR ACÁ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47acdcf1-1c0f-44ee-a510-f8ed0b3748c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (!require(httr)) install.packages(\"httr\", repos = \"https://cloud.r-project.org/\")\n",
+    "library(httr)\n",
+    "\n",
+    "# Definir la función notificar\n",
+    "notificar <- function(mensaje) {\n",
+    "  url <- paste0(\"https://ntfy.sh/\", topic)\n",
+    "  \n",
+    "  # Hacer POST a ntfy con el mensaje\n",
+    "  response <- POST(\n",
+    "    url,\n",
+    "    body = mensaje,\n",
+    "    encode = \"raw\",\n",
+    "    add_headers(`Content-Type` = \"text/plain\")\n",
+    "  )\n",
+    "  \n",
+    "  # Verificar el estado\n",
+    "  if (status_code(response) == 200) {\n",
+    "    message(\"✅ Notificación enviada correctamente\")\n",
+    "  } else {\n",
+    "    warning(\"⚠️ Error al enviar la notificación: \", status_code(response))\n",
+    "  }\n",
+    "}"
    ]
   },
   {
@@ -1312,8 +1354,8 @@
     "PARAM$FEhist$usar_lags <- TRUE # TRUE: activa uso de lags; FALSE caso contrario.\n",
     "PARAM$FEhist$lag_config <- list(\n",
     "    lag1_activo = TRUE, # TRUE: activa lag1; FALSE caso contrario.\n",
-    "    lag2_activo = TRUE, # TRUE: activa lag2; FALSE caso contrario.\n",
-    "    lag3_activo = TRUE  # TRUE: activa lag3; FALSE caso contrario.\n",
+    "    lag2_activo = FALSE, # TRUE: activa lag2; FALSE caso contrario.\n",
+    "    lag3_activo = FALSE  # TRUE: activa lag3; FALSE caso contrario.\n",
     ")"
    ]
   },
@@ -1325,9 +1367,9 @@
    "outputs": [],
    "source": [
     "# parametros de Feature Engineering Historico de Tendencias\n",
-    "PARAM$FE_hist$Tendencias$run <- TRUE # esto activa las tendencias (usar_tendencias)\n",
+    "PARAM$FE_hist$Tendencias$run <- FALSE # esto activa las tendencias (usar_tendencias)\n",
     "PARAM$FE_hist$Tendencias$ventana <- 6 # cantidad de meses: 6 o 12\n",
-    "PARAM$FE_hist$Tendencias$tendencia <- TRUE # ventana de tendencia segun la cantidad de meses\n",
+    "PARAM$FE_hist$Tendencias$tendencia <- FALSE # ventana de tendencia segun la cantidad de meses\n",
     "PARAM$FE_hist$Tendencias$minimo <- FALSE # ventana de minimo segun la cantidad de meses\n",
     "PARAM$FE_hist$Tendencias$maximo <- FALSE # ventana de maximo segun la cantidad de meses\n",
     "PARAM$FE_hist$Tendencias$promedio <- FALSE # ventana de promedio segun la cantidad de meses\n",
@@ -1877,7 +1919,8 @@
     "  bayesiana_salida <- mbo(obj.fun, learner= surr.km, control= ctrl)\n",
     "} else {\n",
     "  bayesiana_salida <- mboContinue(\"HT.RDATA\") # retomo en caso que ya exista\n",
-    "}"
+    "}\n",
+    "notificar(\"Optimización Bayesiana Finalizada\")"
    ]
   },
   {
@@ -2106,7 +2149,9 @@
     "      )\n",
     "    }\n",
     " }\n",
-    "}"
+    "}\n",
+    "\n",
+    "notificar(\"Semillerío Finalizado\")"
    ]
   },
   {
