--- a/src/FEhist Exp/100129/WF_05.ipynb
+++ b/src/FEhist Exp/100129/WF_05.ipynb
@@ -6989,28 +6989,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "C94tK-xid6p2",
    "metadata": {
     "id": "C94tK-xid6p2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: yaml\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# grabo los parametros\n",
     "if( !require(\"yaml\")) install.packages(\"yaml\")\n",
     "require(\"yaml\")\n",
-    "\n",
     "write_yaml( PARAM, file=\"PARAM.yml\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "1b615a62-20cc-4e95-9af2-6b6db38d5efb",
    "metadata": {
     "id": "1b615a62-20cc-4e95-9af2-6b6db38d5efb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'Mon Aug 11 16:38:47 2025'"
+      ],
+      "text/latex": [
+       "'Mon Aug 11 16:38:47 2025'"
+      ],
+      "text/markdown": [
+       "'Mon Aug 11 16:38:47 2025'"
+      ],
+      "text/plain": [
+       "[1] \"Mon Aug 11 16:38:47 2025\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "format(Sys.time(), \"%a %b %d %X %Y\")"
    ]
